# OpenDirStat

./: README.md  index.html  package-lock.json  package.json
.github/workflows/: ci.yml  release.yml
src/: App.tsx  Treemap.tsx  styles.css  types.ts  utils.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
