[package]
name = "open-dir-stat"
version = "0.1.0"
description = "A fast, visual disk usage analyzer"
authors = ["OpenDirStat contributors"]
edition = "2021"

[lib]
name = "open_dir_stat_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "open-dir-stat"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
jwalk = "0.8"
num_cpus = "1"
